# advent-of-code-2022

./: 1-1.py  1-2.py  10.ts  11.ts  12.ts  13.ts  14.ts  15.ts  16.ts  17.ts  18.ts  2-1.py  2-2.py  20.ts  21.ts  3-1.py  3-2.py  4-1.py  4-2.py  5.ts  6.ts  7.ts  8.ts  9.ts  pyproject.toml
