[tool.poetry]
name = "advent-of-code-22"
version = "0.1.0"
description = ""
authors = ["Florian Richter <flori@hey.com>"]

[tool.poetry.dependencies]
python = "^3.11"
advent-of-code-data = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
